--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
-    <link rel="shortcut icon" href="https://anikatsu.me/favicon.ico?v=1.0" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1.0" type="image/x-icon" />
     <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css?v=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css?v=1.0">
-    <link rel="stylesheet" href="https://anikatsu.me/files/css/home.css?v=1.0?v=0.5">
+    <link rel="stylesheet" href="/files/css/home.css?v=1.0?v=0.5">
     <link rel="manifest" href="./manifest.json">
 </head>
 <script>
@@ -47,13 +47,13 @@ if ('serviceWorker' in navigator) {
                 </div>
                 <div id="xheader_menu">
                     <ul class="nav header_menu-list">
-                        <li class="nav-item"><a href="https://anikatsu.me/home" title="Home">Home</a></li>
-                        <li class="nav-item"><a href="https://anikatsu.me/type/movies" title="Movies">Movies</a></li>
-                        <li class="nav-item"><a href="https://anikatsu.me/type/tv-series" title="TV Series">TV Series</a>
+                        <li class="nav-item"><a href="/home" title="Home">Home</a></li>
+                        <li class="nav-item"><a href="/type/movies" title="Movies">Movies</a></li>
+                        <li class="nav-item"><a href="/type/tv-series" title="TV Series">TV Series</a>
                         </li>
-                        <li class="nav-item"><a href="https://anikatsu.me/popular" title="Most Popular">Most Popular</a>
+                        <li class="nav-item"><a href="/popular" title="Most Popular">Most Popular</a>
                         </li>
-                        <li class="nav-item"><a href="https://anikatsu.me/new-season" title="New Season">New Season</a>
+                        <li class="nav-item"><a href="/new-season" title="New Season">New Season</a>
                         </li>
                     </ul>
                     <div class="clearfix"></div>
@@ -67,17 +67,17 @@ if ('serviceWorker' in navigator) {
             <div id="mw-top">
                 <div class="container">
                     <div class="mwt-content">
-                        <div class="mwt-icon"><img src="">
+                        <div class="mwt-icon"><img src="/mt-icon.png">
                         </div>
                         <div class="mwh-logo">
-                            <a href="https://anikatsu.me/home" class="mwh-logo-div">
+                            <a href="/home" class="mwh-logo-div">
                                 <img src="/logo.png" alt="AniKatsu">
                             </a>
                             <div class="clearfix"></div>
                         </div>
                         <div id="xsearch" class="home-search">
                             <div class="search-content">
-                                <form action="https://anikatsu.me/search" autocomplete="off" id="search-form">
+                                <form action="/search" autocomplete="off" id="search-form">
                                     <div class="search-submit">
                                         <div class="search-icon btn-search"><i class="fa fa-search"></i></div>
                                     </div>
@@ -125,7 +125,7 @@ if ('serviceWorker' in navigator) {
             <div class="mw-body">
                 <div class="container">
                     <div id="action-button">
-                        <a href="https://anikatsu.me/home" class="btn btn-lg btn-radius btn-primary">View Full Site <i
+                        <a href="/home" class="btn btn-lg btn-radius btn-primary">View Full Site <i
                                 class="fas fa-arrow-circle-right ml-2"></i></a>
                     </div>
                     <script type="text/javascript"
@@ -348,7 +348,7 @@ if ('serviceWorker' in navigator) {
         <div id="xfooter-about">
             <div class="container">
                 <p class="copyright">©
-                    2023 <a href="https://anikatsu.me">AniKatsu</a>. All rights reserved.
+                    2023 <a href=""DogBarkAnime</a>. All rights reserved.
                 </p>
             </div>
         </div>
