--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7330411239749898"
      crossorigin="anonymous"></script>
-    <title>AniKatsu - Official AniKatsu Watch High Quality Anime Online Without Ads</title>
+    <title>DogBarkAnime - Official DogBarkAnime Watch High Quality Anime Online Without Ads</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="index,follow" />
     <meta http-equiv="content-language" content="en" />
     <meta name="description"
-        content="AniKatsu - Official AniKatsu #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
+        content="DogBarkAnime - Official DogBarkAnime #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
     <meta name="keywords"
         content="anime to watch, watch anime,anime online, free anime online, online anime, anime streaming, stream anime online, english anime, english dubbed anime" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://anikatsu.me" />
+    <meta property="og:url" content="https://DogBarkAnime.me" />
     <meta property="og:title"
-        content="AniKatsu - Official AniKatsu Watch High Quality Anime Online Without Ads" />
-    <meta property="og:image" content="https://anikatsu.me/files/images/banner.png" />
+        content="DogBarkAnime - Official DogBarkAnime Watch High Quality Anime Online Without Ads" />
+    <meta property="og:image" content="https://dogbarkanime.netlify.app/files/images/banner.png" />
     <meta property="og:description"
-        content="AniKatsu - Official AniKatsu #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
+        content="DogBarkAnime - Official DogBarkAnime #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
@@ -71,7 +71,7 @@ if ('serviceWorker' in navigator) {
                         </div>
                         <div class="mwh-logo">
                             <a href="/home" class="mwh-logo-div">
-                                <img src="/logo.png" alt="AniKatsu">
+                                <img src="/logo.png" alt="DogBarkAnime">
                             </a>
                             <div class="clearfix"></div>
                         </div>
@@ -88,30 +88,30 @@ if ('serviceWorker' in navigator) {
                             <div class="xhashtag">
                                 <span class="title">Top search:</span>
 
-                                <a href="https://anikatsu.me/search?keyword=One%20Piece" class="item">One Piece</a>
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=One%20Piece" class="item">One Piece</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Naruto%3A%20Shippuden" class="item">Naruto:
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Naruto%3A%20Shippuden" class="item">Naruto:
                                     Shippuden</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Naruto" class="item">Naruto</a>
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Naruto" class="item">Naruto</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Jujutsu%20Kaisen%200%20Movie"
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Jujutsu%20Kaisen%200%20Movie"
                                     class="item">Jujutsu Kaisen 0
                                     Movie</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Bleach" class="item">Bleach</a>
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Bleach" class="item">Bleach</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Jujutsu%20Kaisen%20(TV)" class="item">Jujutsu
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Jujutsu%20Kaisen%20(TV)" class="item">Jujutsu
                                     Kaisen (TV)</a>
 
-                                <a href="https://anikatsu.me/search?keyword=The%20Eminence%20in%20Shadow" class="item">The
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=The%20Eminence%20in%20Shadow" class="item">The
                                     Eminence in
                                     Shadow</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Mob%20Psycho%20100%20III" class="item">Mob
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Mob%20Psycho%20100%20III" class="item">Mob
                                     Psycho 100 III</a>
 
-                                <a href="https://anikatsu.me/search?keyword=Boruto%3A%20Naruto%20Next%20Generations"
+                                <a href="https://dogbarkanime.netlify.app/search?keyword=Boruto%3A%20Naruto%20Next%20Generations"
                                     class="item">Boruto:
                                     Naruto Next Generations</a>
 
@@ -135,7 +135,7 @@ if ('serviceWorker' in navigator) {
                         <div class="share-buttons-block">
                             <div class="share-icon"></div>
                             <div class="sbb-title">
-                                <span>Share AniKatsu</span>
+                                <span>Share DogBarkAnime</span>
                                 <p class="mb-0">to your friends</p>
                             </div>
                             <div class="sbb-social">
@@ -148,7 +148,7 @@ if ('serviceWorker' in navigator) {
 </div>
                     <div class="mwb-2col">
                         <div class="mwb-left">
-                            <h1 class="mw-heading">AniKatsu - The best site to watch anime online for Free
+                            <h1 class="mw-heading">DogBarkAnime - The best site to watch anime online for Free
                             </h1>
                             <p>Do you know that according to Google, the monthly search volume for anime related topics
                                 is
@@ -157,34 +157,34 @@ if ('serviceWorker' in navigator) {
                                 rise in the number of free anime streaming sites.</p>
                             <p>Just like free online movie streaming sites, anime watching sites are not created
                                 equally,
-                                some are better than the rest, so we've decided to build AniKatsu to be one of
+                                some are better than the rest, so we've decided to build DogBarkAnime to be one of
                                 the best
                                 free
                                 anime streaming site for all anime fans on the world.</p>
-                            <h2>1/ What is AniKatsu?</h2>
-                            <p>AniKatsu is a free site to watch anime and you can even download subbed or
+                            <h2>1/ What is DogBarkAnime?</h2>
+                            <p>DogBarkAnime is a free site to watch anime and you can even download subbed or
                                 dubbed anime in
                                 ultra HD quality without any registration or payment. By having No Ads in all kinds, we
                                 are
                                 trying to make it the safest site for free anime.</p>
-                            <h2>2/ Is AniKatsu safe?</h2>
+                            <h2>2/ Is DogBarkAnime safe?</h2>
                             <p>Yes we are, we do have only one Ads to cover the server cost and we keep scanning the ads
                                 24/7 to make sure all are clean, If you find any ads that is suspicious, please forward
                                 us
                                 the info and we will remove it.</p>
-                            <h2>3/ So what make AniKatsu the best site to watch anime free online?</h2>
-                            <p>Before building AniKatsu, we've checked many other free anime sites, and learnt
+                            <h2>3/ So what make DogBarkAnime the best site to watch anime free online?</h2>
+                            <p>Before building DogBarkAnime, we've checked many other free anime sites, and learnt
                                 from them.
                                 We
                                 only keep the good things and remove all the bad things from all the competitors, to put
                                 it
-                                in our AniKatsu website. Let's see how we're so confident about being the best
+                                in our DogBarkAnime website. Let's see how we're so confident about being the best
                                 site for
                                 anime
                                 streaming:</p>
                             <ul>
                                 <li><strong>Safety:</strong> We try our best to not having harmful ads on
-                                    AniKatsu.
+                                    DogBarkAnime.
                                 </li>
                                 <li><strong>Content library:</strong> Our main focus is anime. You can find here
                                     popular,
@@ -196,7 +196,7 @@ if ('serviceWorker' in navigator) {
                                 </li>
                                 <li><strong>Quality/Resolution:</strong> All titles are in excellent resolution, the
                                     best
-                                    quality possible. AniKatsu also has a quality setting function to make
+                                    quality possible. DogBarkAnime also has a quality setting function to make
                                     sure our users
                                     can
                                     enjoy streaming no matter how fast your Internet speed is. You can stream the anime
@@ -205,14 +205,14 @@ if ('serviceWorker' in navigator) {
                                     even 1080p anime.
                                 </li>
                                 <li><strong>Streaming experience:</strong> Compared to other anime streaming sites, the
-                                    loading speed at AniKatsu is faster. Downloading is just as easy as
+                                    loading speed at DogBarkAnime is faster. Downloading is just as easy as
                                     streaming, you
                                     won't
                                     have any problem saving the videos to watch offline later.
                                 </li>
                                 <li><strong>Updates:</strong> We updates new titles as well as fulfill the requests on a
                                     daily basis so be warned, you will never run out of what to watch on
-                                    AniKatsu.
+                                    DogBarkAnime.
                                 </li>
                                 <li><strong>User interface:</strong> Our UI and UX makes it easy for anyone, no matter
                                     how
@@ -224,7 +224,7 @@ if ('serviceWorker' in navigator) {
                                     site's
                                     categories or simply scroll down for new releases.
                                 </li>
-                                <li><strong>Device compatibility:</strong> AniKatsu works alright on both your
+                                <li><strong>Device compatibility:</strong> DogBarkAnime works alright on both your
                                     mobile and
                                     desktop. However, we'd recommend you use your desktop for a smoother streaming
                                     experience.
@@ -237,7 +237,7 @@ if ('serviceWorker' in navigator) {
                                 </li>
                             </ul>
                             <p>So if you're looking for a trustworthy and safe site for your Anime streaming, let's give
-                                AniKatsu a try. And if you like us, please help us to spread the words and do
+                                DogBarkAnime a try. And if you like us, please help us to spread the words and do
                                 not forget
                                 to
                                 bookmark our site.</p>
@@ -373,3 +373,4 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
