--- a/home.html
+++ b/home.html
@@ -333,7 +333,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-8745.jpg" alt="One Piece">
+                                            data-src="https://anikatsu.me/files/slider/slider-8745.jpg" alt="One Piece">
                                     </div>
                                 </div>
                                 <div class="deslide-item-content">
@@ -382,7 +382,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-11168.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-11168.jpg"
                                             alt="Chainsaw Man">
                                     </div>
                                 </div>
@@ -434,7 +434,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-11156.jpg" alt="Blue Lock">
+                                            data-src="https://anikatsu.me/files/slider/slider-11156.jpg" alt="Blue Lock">
                                     </div>
                                 </div>
                                 <div class="deslide-item-content">
@@ -485,7 +485,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-11166.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-11166.jpg"
                                             alt="Bleach: Sennen Kessen-hen">
                                     </div>
                                 </div>
@@ -530,7 +530,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-10776.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-10776.jpg"
                                             alt="Spy x Family Part 2">
                                     </div>
                                 </div>
@@ -569,7 +569,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-11107.png"
+                                            data-src="https://anikatsu.me/files/slider/slider-11107.png"
                                             alt="Boku no Hero Academia 6th Season">
                                     </div>
                                 </div>
@@ -610,7 +610,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-11135.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-11135.jpg"
                                             alt="Mob Psycho 100 III">
                                     </div>
                                 </div>
@@ -649,7 +649,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-8533.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-8533.jpg"
                                             alt="Black Clover (TV)">
                                     </div>
                                 </div>
@@ -700,7 +700,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-5832.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-5832.jpg"
                                             alt="Naruto Shippuden">
                                     </div>
                                 </div>
@@ -752,7 +752,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
                                         <img class="film-poster-img lazyload"
-                                            data-src="https://dogbarkanime.netlify.app/files/slider/slider-8635.jpg"
+                                            data-src="https://anikatsu.me/files/slider/slider-8635.jpg"
                                             alt="Boruto: Naruto Next Generations">
                                     </div>
                                 </div>
