--- a/home.html
+++ b/home.html
@@ -1141,7 +1141,7 @@ if ('serviceWorker' in navigator) {
                                 <section class="block_area block_area_home">
                     <div class="block_area-header">
                         <div class="float-left bah-heading mr-4">
-                            <h2 class="cat-heading">Latest bed</h2>
+                            <h2 class="cat-heading">Trending</h2>
                         </div>
                         <div class="float-right viewmore">
                             <a class="btn" href="/latest/bed">View more<i class="fas fa-angle-right ml-2"></i></a>
