--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
+<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
     <title>DogBarkAnime - Official DogBarkAnime #1 Watch High Quality Anime Online Without Ads</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -25,7 +25,7 @@
     <meta property="og:image:height" content="350">
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="shortcut icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="shortcut icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0">
     <link rel="stylesheet" href="https://dogbarkanime.netlify.app/files/css/style.css?v=1.0">
 
@@ -59,7 +59,7 @@
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('https://dogbarkanime.netlify.app/sw.js');
 };
-</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
+</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
 
 
 <body data-page="page_home" style="">
@@ -212,9 +212,9 @@ if ('serviceWorker' in navigator) {
         </a>
         <div id="search">
             <div class="search-content">
-                <form action="/search" autocomplete="off" data-dashlane-rid="8e6440a5f5274366" data-form-type="">
-                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="29072b986966cca5" data-form-type="">
-                    <button type="mit" class="search-icon" data-dashlane-rid="4625bc720e4d8429" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
+                <form action="/search" autocomplete="off" data-dashlane-rid="c6ed45653b5a1288" data-form-type="">
+                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="d3f2de179eda2ae1" data-form-type="">
+                    <button type="mit" class="search-icon" data-dashlane-rid="92c064438aab1f36" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
@@ -313,7 +313,7 @@ if ('serviceWorker' in navigator) {
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
-                                        <img class="film-poster-img lazyloaded" data-src="https://anikatsu.me/files/slider/slider-8635.jpg" alt="Boruto: Naruto Next Generations" src="https://anikatsu.me/files/slider/slider-8635.jpg">
+                                        <img class="film-poster-img ls-is-cached lazyloaded" data-src="https://anikatsu.me/files/slider/slider-8635.jpg" alt="Boruto: Naruto Next Generations" src="https://anikatsu.me/files/slider/slider-8635.jpg">
                                     </div>
                                 </div>
                                 <div class="deslide-item-content">
@@ -765,7 +765,7 @@ if ('serviceWorker' in navigator) {
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
-                                        <img class="film-poster-img ls-is-cached lazyloaded" data-src="https://anikatsu.me/files/slider/slider-8745.jpg" alt="One Piece" src="https://anikatsu.me/files/slider/slider-8745.jpg">
+                                        <img class="film-poster-img lazyloaded" data-src="https://anikatsu.me/files/slider/slider-8745.jpg" alt="One Piece" src="https://anikatsu.me/files/slider/slider-8745.jpg">
                                     </div>
                                 </div>
                                 <div class="deslide-item-content">
@@ -814,7 +814,7 @@ if ('serviceWorker' in navigator) {
                     </div>
                     <div class="clearfix"></div>
                     <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
             </div>
         </div>
     </div>
@@ -834,18 +834,18 @@ if ('serviceWorker' in navigator) {
             <div class="block_area-content">
                 <div class="trending-list" id="trending-home">
                     <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
-                        <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+                        <div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
 
                             
                             <div class="swiper-slide swiper-slide-active" style="width: 223.667px; margin-right: 15px;">
                                 <div class="item">
                                     <div class="number">
                                         <span>1</span>
-                                        <div class="film-title dynamic-name" data-jname="">
+                                        <div class="film-title dynamic-name" data-jname="">One Piece
                                                                                     </div>
                                     </div>
                                     <a href="/anime/oshi-no-ko" class="film-poster" title="">
-                                        <img data-src="https://gogocdn.net/cover/oshi-no-ko-1680121500.png" src="https://gogocdn.net/cover/oshi-no-ko-1680121500.png" class="film-poster-img ls-is-cached lazyloaded" alt="">
+                                        <img data-src="https://cdn.myanimelist.net/images/anime/6/73245.webp" src="https://cdn.myanimelist.net/images/anime/6/73245.webp" class="film-poster-img ls-is-cached lazyloaded" alt="">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -967,11 +967,11 @@ if ('serviceWorker' in navigator) {
                                 <div class="item">
                                     <div class="number">
                                         <span>10</span>
-                                        <div class="film-title dynamic-name" data-jname="One Piece">
-                                            One Piece                                        </div>
+                                        <div class="film-title dynamic-name" data-jname="One Piece">Tensura Nikki: Tensei shitara Slime Datta Ken
+                                                                                   </div>
                                     </div>
-                                    <a href="/anime/one-piece" class="film-poster" title="One Piece">
-                                        <img data-src="https://gogocdn.net/images/anime/One-piece.jpg" src="" class="film-poster-img lazyload" alt="One Piece">
+                                    <a href="/anime/tensura-nikki-tensei-shitara-slime-datta-ken" class="film-poster" title="One Piece">
+                                        <img data-src="https://cdn.myanimelist.net/images/anime/1069/123309.jpg" src="https://cdn.myanimelist.net/images/anime/1069/123309.jpg" class="film-poster-img lazyloaded" alt="One Piece">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -985,7 +985,7 @@ if ('serviceWorker' in navigator) {
                                             Vinland Saga Season 2                                        </div>
                                     </div>
                                     <a href="/anime/vinland-saga-season-2" class="film-poster" title="Vinland Saga Season 2">
-                                        <img data-src="https://gogocdn.net/cover/vinland-saga-season-2-1672333695.png" src="" class="film-poster-img lazyload" alt="Vinland Saga Season 2">
+                                        <img data-src="https://gogocdn.net/cover/vinland-saga-season-2-1672333695.png" src="https://gogocdn.net/cover/vinland-saga-season-2-1672333695.png" class="film-poster-img lazyloaded" alt="Vinland Saga Season 2">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -999,7 +999,7 @@ if ('serviceWorker' in navigator) {
                                             Dr. Stone: New World                                        </div>
                                     </div>
                                     <a href="/anime/dr-stone-3rd-season" class="film-poster" title="Dr. Stone: New World">
-                                        <img data-src="https://gogocdn.net/cover/dr-stone-3rd-season-1680121906.png" src="" class="film-poster-img lazyload" alt="Dr. Stone: New World">
+                                        <img data-src="https://gogocdn.net/cover/dr-stone-3rd-season-1680121906.png" src="https://gogocdn.net/cover/dr-stone-3rd-season-1680121906.png" class="film-poster-img lazyloaded" alt="Dr. Stone: New World">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -1013,7 +1013,7 @@ if ('serviceWorker' in navigator) {
                                             Fumetsu no Anata e 2nd Season                                        </div>
                                     </div>
                                     <a href="/anime/fumetsu-no-anata-e-2nd-season" class="film-poster" title="Fumetsu no Anata e 2nd Season">
-                                        <img data-src="https://gogocdn.net/cover/fumetsu-no-anata-e-2nd-season-1662695170.png" src="" class="film-poster-img lazyload" alt="Fumetsu no Anata e 2nd Season">
+                                        <img data-src="https://gogocdn.net/cover/fumetsu-no-anata-e-2nd-season-1662695170.png" src="https://gogocdn.net/cover/fumetsu-no-anata-e-2nd-season-1662695170.png" class="film-poster-img lazyloaded" alt="Fumetsu no Anata e 2nd Season">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -1027,7 +1027,7 @@ if ('serviceWorker' in navigator) {
                                             Tonikaku Kawaii 2nd Season                                        </div>
                                     </div>
                                     <a href="/anime/tonikaku-kawaii-2nd-season" class="film-poster" title="Tonikaku Kawaii 2nd Season">
-                                        <img data-src="https://gogocdn.net/cover/tonikaku-kawaii-2nd-season-1680203740.png" src="" class="film-poster-img lazyload" alt="Tonikaku Kawaii 2nd Season">
+                                        <img data-src="https://gogocdn.net/cover/tonikaku-kawaii-2nd-season-1680203740.png" src="https://gogocdn.net/cover/tonikaku-kawaii-2nd-season-1680203740.png" class="film-poster-img lazyloaded" alt="Tonikaku Kawaii 2nd Season">
                                     </a>
                                     <div class="clearfix"></div>
                                 </div>
@@ -1122,7 +1122,7 @@ if ('serviceWorker' in navigator) {
                         </div>
                         <div class="clearfix"></div>
                         <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
                     <div class="trending-navi">
                         <div class="navi-next" tabindex="0" role="button" aria-label="Next slide" aria-disabled="false"><i class="fas fa-angle-right"></i>
                         </div>
@@ -1836,6 +1836,7 @@ if ('serviceWorker' in navigator) {
     <link rel="stylesheet" href="https://dogbarkanime.netlify.app/files/css/jquery-ui.css?v=1.0">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js?v=1.0"></script>
     
+
 
 
 
