--- a/home.html
+++ b/home.html
@@ -844,7 +844,7 @@ if ('serviceWorker' in navigator) {
                                         <div class="film-title dynamic-name" data-jname="">One Piece
                                                                                     </div>
                                     </div>
-                                    <a href="/anime/oshi-no-ko" class="film-poster" title="One Piece">
+                                    <a href="/anime/one-piece" class="film-poster" title="One Piece">
                                         <img data-src="https://cdn.myanimelist.net/images/anime/6/73245.webp" src="https://cdn.myanimelist.net/images/anime/6/73245.webp" class="film-poster-img ls-is-cached lazyloaded" alt="">
                                     </a>
                                     <div class="clearfix"></div>
