--- a/watch/one-piece-episode-1.html
+++ b/watch/one-piece-episode-1.html
@@ -433,7 +433,7 @@ var site_config = {
                                             <div class="ps__-list">
                                                 <div class="item">
                                                     <a id="server1"
-                                                        href="https://player.DogBarkAnime.me?id=one-piece-episode-1"
+                                                        href="https://player.anikatsu.me/?id=one-piece-episode-1"
                                                         target="iframe-to-load" class="btn btn-server active">Server
                                                         1</a>
                                                 </div>
